+ fixed mapview for single map and multi-marker map + change drupal message of visibility check

--- a/curios.css
+++ b/curios.css
@@ -24,6 +24,12 @@
 	height:350px;
 }
 
+#multimap{
+	width:80%;
+	height:350px;
+}
+
+
 .curios-place{
 display:none;
 }
